Fix home page horizontal scroll

--- a/src/ui/friend-communities/friend-communities.styles.css
+++ b/src/ui/friend-communities/friend-communities.styles.css
@@ -2,7 +2,7 @@
   background-color: darkgray;
   width: 100%;
   margin: 4rem auto;
-  padding: 2rem;
+  padding: 2rem 0;
   text-align: center;
 }
 
