--- a/src/ui/main-header/main-header.styles.css
+++ b/src/ui/main-header/main-header.styles.css
@@ -9,7 +9,7 @@
 	position: relative;
 	z-index: 1;
 	margin: 0;
-	width: 100vw;
+	width: 100%;
 	box-sizing: border-box;
 }
 
